# santaka

./: .gitignore  README.md  pyproject.toml  santaka.proto
backend/: Dockerfile  go.mod  go.sum  main.go  main_test.go  retrieval.go  retrieval_test.go  routes.go  routes_test.go  tools.go
backend/pb/: santaka.pb.go  santaka_grpc.pb.go
backend/testdata/: borsaitaliana_complete_success.html  borsaitaliana_error_incomplete.html  borsaitaliana_search_success.html  yahoo_chart_success.json
docker/santaka/: Dockerfile
docker/santaka_task/: Dockerfile
engine/: Dockerfile  pyproject.toml
engine/engine/: analytics.py  cli.py  santaka_pb2.py  santaka_pb2_grpc.py  server.py  stock.py
engine/tests/: test_analytics.py  test_engine.py  test_server.py  test_stock.py
santaka/: account.py  analytics.py  app.py  cli.py  db.py  models.py  task.py  user.py  utils.py
santaka/account/: models.py  utils.py  views.py
santaka/bond/: analytics.py  models.py  utils.py  views.py
santaka/stock/: analytics.py  models.py  test_utils.py  utils.py  views.py
tests/: test_analytics.py  test_santaka.py  test_stock.py
tests/stock/: test_utils.py  test_views.py
