[tool.poetry]
name = "santaka"
version = "0.1.0"
description = ""
authors = ["akita8 <mbianchi.akita@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
databases = "^0.4.3"
uvicorn = "^0.13.4"
aiosqlite = "^0.17.0"
python-jose = "^3.2.0"
cryptography = "^3.4.7"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-multipart = "^0.0.5"
click = "^7.0.0"
aiohttp = "^3.7.4"
pytz = "^2021.1"


[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
ipython = "^7.23.1"
pytest = "^6.2.4"
black = "^21.5b1"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"

[tool.poetry.scripts]
create_user = 'santaka.cli:create_user'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
