[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["akita8 <mbianchi.akita@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
grpcio = "^1.34.0"
protobuf = "^3.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"
grpcio-tools = "^1.31.0"
ipython = "^7.19.0"
pytest-cov = "^2.10.1"
jedi = "0.17.2" # https://github.com/ipython/ipython/issues/12740 remove when ipython updates

[tool.poetry.scripts]
server = 'engine.cli:server'
generate = 'engine.cli:generate'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
